src/objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the requirement is active. If unchecked, this requirement will not display on any applications.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Control__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Application Control that this requirement is a part of</inlineHelpText>
        <label>Application Control</label>
        <referenceTo>Application_Control__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Creation_Display_Order__c</fullName>
        <description>Controls whether this requirement shows before or after the Term/Program questions on application creation. If blank, shows before.</description>
        <inlineHelpText>Controls whether this requirement shows before or after the Term/Program questions on application creation. If blank, shows before.</inlineHelpText>
        <label>Application Creation Display Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Term/Program Questions</fullName>
                </value>
                <value>
                    <fullName>After Term/Program Questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <inlineHelpText>Application status(es) that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Citizenship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <inlineHelpText>Degree type(s) that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <inlineHelpText>Delivery type(s) that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <inlineHelpText>Order this requirement is displayed relative to other requirements</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intended_Program_Codes__c</fullName>
        <description>Intended program codes that this requirement applies to (applies to all if blank)</description>
        <inlineHelpText>Intended program codes that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Intended Program Codes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Intended program that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Intended Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Only_Show_on_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this requirement will show on the checklist even if it&apos;s internal-only. The applicant will not be able to view answers for this requirement, but will be able to see if it&apos;s been satisfied or not.</description>
        <inlineHelpText>If checked, this requirement will show on the checklist even if it&apos;s internal-only. The applicant will not be able to view answers for this requirement, but will be able to see if it&apos;s been satisfied or not.</inlineHelpText>
        <label>Internal Only Show on Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this requirement can only be fulfilled by an internal user</inlineHelpText>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label of this requirement. If left blank, the name is used.</description>
        <inlineHelpText>The label of this requirement. If left blank, the name is used.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <inlineHelpText>Residency type that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <inlineHelpText>School/College that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_on_Application_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this requirement should display when creating a new application and not on the checklist</inlineHelpText>
        <label>Show on Application Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <inlineHelpText>Student type(s) that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Parameter__c</fullName>
        <formula>Application_Control__r.URL_Parameter__c</formula>
        <label>URL Parameter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_Requirement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether applicants need to view all items within a requirement before submission</description>
        <label>Viewing Requirement</label>
        <type>Checkbox</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Display_Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Application_Control__c</columns>
        <columns>School_College__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>